[package]
name = "s4rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
dashmap = "7.0.0-rc2"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = { version = "1.0.145", features = ["std"] }
eyre = "0.6.12"
log = "0.4.28"
rand = { version = "0.10.0-rc.5", features = ["std", "small_rng"] }